Fix: Wrong size of icon set

--- a/src/default/assets/css/setup/_icons.scss
+++ b/src/default/assets/css/setup/_icons.scss
@@ -41,7 +41,7 @@ $MEMBER_ICONS:
 
         @include retina {
             background-image: url(../images/icons@2x.png);
-            background-size: 170px 153px;
+            background-size: 170px 170px;
         }
     }
 }
